--- a/src/index.html
+++ b/src/index.html
@@ -25,10 +25,10 @@
     </style>
 </head>
 
-<body ng-cloak layout="column">
+<body ng-cloak ng-controller="UserController as userController" layout="column">
 
     <md-toolbar layout="row">
-        <md-button hide-gt-sm class="menu-btn" aria-label="Menu">
+        <md-button hide-gt-sm class="menu-btn" aria-label="Menu" ng-click="userController.toggleMenu('left')">
             <md-icon md-svg-icon="menu"></md-icon>
         </md-button>
         <h3>Angular Material - Starter App</h3>
@@ -58,10 +58,13 @@
     <script src="../node_modules/angular-animate/angular-animate.js" type="text/javascript"></script>
     <script src="../node_modules/angular-aria/angular-aria.js" type="text/javascript"></script>
     <script src="../node_modules/angular-material/angular-material.js" type="text/javascript"></script>
+    
+    <script src="./users/users-module.js" type="text/javascript"></script>
+    <script src="./users/user-controller.js" type="text/javascript"></script>
 
     <script>
         angular
-          .module('boilerplateApp', ['ngMaterial'])
+          .module('boilerplateApp', ['ngMaterial', 'users'])
           .config(function($mdThemingProvider, $mdIconProvider){
 
               $mdThemingProvider.theme('default')
